--- a/angular.json
+++ b/angular.json
@@ -89,7 +89,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngrx-data-users:build"
+            "browserTarget": "ngrx-data-users:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
